# stripe-marketplace

./: .replit  README.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  start_django.sh  start_frontend.sh
attached_assets/: Pasted-import-stripe-from-django-conf-import-settings-from-django-http-import-JsonResponse-HttpResponse-fr-1752577812534_1752577812536.txt  Pasted-sir-sang-sir-sang-ThinkPad-T490-stripe-market-place-npm-run-dev-rest-express-1-0-0-dev-NODE--1752584783181_1752584783184.txt
backend/: auth.py  stripe_routes.py
client/: index.html
client/src/: App.tsx
client/src/components/: CartSidebar.tsx  MarketplaceContent.tsx  MarketplaceHero.tsx  Navigation.tsx  SubscriptionPlans.tsx
client/src/contexts/: AuthContext.tsx  SubscriptionContext.tsx
client/src/lib/: queryClient.ts
client/src/services/: checkoutService.ts
crisp_backend/: README.md  manage.py  requirements.txt  start_server.py  test_backend.py
crisp_backend/crisp_backend/: asgi.py  settings.py  urls.py  wsgi.py
crisp_backend/payments/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
crisp_backend/payments/management/: __init__.py
crisp_backend/payments/migrations/: 0001_initial.py  (+1 more)
src/: App.tsx
src/components/: CartSidebar.tsx  Hero.tsx  MarketplaceContent.tsx  MarketplaceFooter.tsx  MarketplaceHero.tsx  Navigation.tsx  SubscriptionWarning.tsx
src/contexts/: AuthContext.tsx  SubscriptionContext.tsx
src/pages/: About.tsx  Contact.tsx  Home.tsx  Index.tsx  Marketplace.tsx  Services.tsx
src/services/: checkoutService.ts
(+13 files in other folders)
